ReadMe, Version, Name